--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,17 @@ authors = ["Michael Schmischke <michael.schmischke@math.tu-chemnitz.de> and Feli
 version = "1.1.0"
 
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 NFFT3 = "53104703-03e8-40a5-ab01-812303a44cae"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+Aqua = "0.5"
 Combinatorics = "1"
-LinearMaps = "2"
+LinearMaps = "3"
 NFFT3 = "1.1"
 julia = "1"
