--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -2,9 +2,8 @@ name: Documenter
 
 on:
   push:
-    branches:
-      - main
-    tags: '*'
+    branches: [main]
+    tags: [v*]
   pull_request:
 
 jobs:
