--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,14 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 NFFT3 = "53104703-03e8-40a5-ab01-812303a44cae"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
 
 [compat]
 Aqua = "0.5"
 Combinatorics = "1"
 LinearMaps = "3"
 NFFT3 = "1.1"
+ToeplitzMatrices = "0.7"
 julia = "1"
